corrected 1 px too wide on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -270,4 +270,8 @@
   #kiwiki #go {
     flex-direction: column;
   }
+
+  #kiwiki .kiwiki_aside  .dokuwiki__aside_wrapper > div, #kiwiki .kiwiki-sidebar-mobile{
+    border: none;
+  }
 } /* /@media */
